--- a/composer.json
+++ b/composer.json
@@ -4,17 +4,20 @@
     "license": "MIT",
     "prefer-stable": true,
     "require": {
-        "php": "^7.1",
-        "auth0/auth0-php": "^7.0",
-        "illuminate/support": "5.* | ^6.0 | ^7.0",
-        "illuminate/contracts": "5.* | ^6.0 | ^7.0"
+      "php": "^7.3 | ^8.0",
+      "ext-json": "*",
+      "ext-openssl": "*",
+      "auth0/auth0-php": "^7.6",
+      "illuminate/support": " ^6.0 | ^7.0 | ^8.0",
+      "illuminate/contracts": "^6.0 | ^7.0 | ^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7|^8|^9",
-        "squizlabs/php_codesniffer": "^3.2",
-        "phpcompatibility/php-compatibility": "^8.1",
-        "dealerdirect/phpcodesniffer-composer-installer": "^0.5.0",
-        "orchestra/testbench": "^3.8|^4.0|^5.0"
+      "phpunit/phpunit": "^9.3",
+      "squizlabs/php_codesniffer": "^3.2",
+      "phpcompatibility/php-compatibility": "^8.1",
+      "dealerdirect/phpcodesniffer-composer-installer": "^0.7",
+      "orchestra/testbench": "^4.0 | ^5.0",
+      "nunomaduro/larastan": "^0.6.11"
     },
     "scripts": {
         "test": "SHELL_INTERACTIVE=1 \"vendor/bin/phpunit\" --coverage-text ",
